Perkin-UAT/force-app/main/default/objects/Campaign/fields/Adtrack_Event_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Adtrack_Event_Source_Code__c</fullName>
    <label>Adtrack Event Source Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>