Perkin-UAT/force-app/main/default/objects/Campaign/fields/AFM_Code__c.field-meta.xml
<CustomField>
    <fullName>AFM_Code__c</fullName>
    <label>AFM Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>