Perkin-UAT/force-app/main/default/objects/Campaign/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Element</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASLS</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>Dx</fullName>
            </value>
            <value>
                <fullName>Emerging Tech.</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>MULTI</fullName>
            </value>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>Project Farma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>