Perkin-UAT/force-app/main/default/objects/Campaign/fields/Campaign_Leader__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Leader__c</fullName>
    <inlineHelpText>May add as many team members as needed separated by a comma.</inlineHelpText>
    <label>Campaign Leader</label>
    <length>120</length>
    <type>Text</type>
</CustomField>