Perkin-UAT/force-app/main/default/objects/Campaign/fields/Creative_Source__c.field-meta.xml
<CustomField>
    <fullName>Creative_Source__c</fullName>
    <label>Creative Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Brodeur</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>