Perkin-UAT/force-app/main/default/objects/Campaign/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6328500 Event - Sem/Group/Meet</fullName>
            </value>
            <value>
                <fullName>6321401 Promotional/Sponsorships</fullName>
            </value>
            <value>
                <fullName>6321000 Advertising Space</fullName>
            </value>
            <value>
                <fullName>6321403 Electronic/Web Mktg.</fullName>
            </value>
            <value>
                <fullName>6327000 Trade Show Expense</fullName>
            </value>
            <value>
                <fullName>6328600 Event - Exhibitry</fullName>
            </value>
            <value>
                <fullName>6332800 Direct Mail</fullName>
            </value>
            <value>
                <fullName>6322500 Advertising Produce</fullName>
            </value>
            <value>
                <fullName>6331500 Public Relations</fullName>
            </value>
            <value>
                <fullName>6321402 Film/Photo/Audio Vis</fullName>
            </value>
            <value>
                <fullName>6321404 Instruction Manuals</fullName>
            </value>
            <value>
                <fullName>6325000 Sales Literature</fullName>
            </value>
            <value>
                <fullName>6332500 Literature Printing</fullName>
            </value>
            <value>
                <fullName>6332600 Literature Fulfillment</fullName>
            </value>
            <value>
                <fullName>6331600 Research/Strategy Dev.</fullName>
            </value>
            <value>
                <fullName>6332700 Brand Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>