Perkin-UAT/force-app/main/default/objects/Campaign/fields/Follow_Up_Category__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Category__c</fullName>
    <description>Telemarketing Category - VoiceCentric</description>
    <label>Follow Up Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA - Agree to Appointment</fullName>
            </value>
            <value>
                <fullName>Email - Send Email w/Fufillment</fullName>
            </value>
            <value>
                <fullName>General Inquiry - Other Product</fullName>
            </value>
            <value>
                <fullName>Lit Fulfillment - Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>