Perkin-UAT/force-app/main/default/objects/Campaign/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Invoiced</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Entered in GELCO</fullName>
            </value>
            <value>
                <fullName>VISA Purchase Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>