Perkin-UAT/force-app/main/default/objects/Campaign/fields/Legacy_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Campaign_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Campaign Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>