Perkin-UAT/force-app/main/default/objects/Campaign/fields/Marcom_Field_Partner__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Field_Partner__c</fullName>
    <label>Marcom/Field Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>