Perkin-UAT/force-app/main/default/objects/Campaign/fields/Name_of_NPI__c.field-meta.xml
<CustomField>
    <fullName>Name_of_NPI__c</fullName>
    <label>Name of NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>