Perkin-UAT/force-app/main/default/objects/Campaign/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <description>OLD-Picklist version of lookup standard field.  DO NOT ADD NEW VALUES.
 This links multiple campaign components to one master umbrella campaign</description>
    <inlineHelpText>OLD - Please Create Campaign and link to it via Lookup in Field at top of page.</inlineHelpText>
    <label>OLD-Parent Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PerkinElmer LAS Website</fullName>
            </value>
            <value>
                <fullName>AlphaScreen Phosphosensor Launch</fullName>
            </value>
            <value>
                <fullName>ASLS-ADV-Q3-11-IRPharma-EU</fullName>
            </value>
            <value>
                <fullName>ASLS-E3RD/EPKI-Q4-11-Compliance and IRPharma-GLO</fullName>
            </value>
            <value>
                <fullName>ASLS-EPKI-Q2-12-AMS-SPP-GLO</fullName>
            </value>
            <value>
                <fullName>ASLS-EPKI-Q3-11-Gateway-Projects-GLO</fullName>
            </value>
            <value>
                <fullName>ASLS-EPKI-Q4-11-EnviroCampaign-EU</fullName>
            </value>
            <value>
                <fullName>ASLS-GEN-Q1-Q2-Q3-Q4-Frontier-EU</fullName>
            </value>
            <value>
                <fullName>ASLS-GEN-Q1-Q2-Q3-Q4-SpectrumTwo-EU</fullName>
            </value>
            <value>
                <fullName>ASLS-GEN-Q4-11-Food-EU</fullName>
            </value>
            <value>
                <fullName>ASLS-MO-Q2-11-FlexarSQ-MASTER-EU</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q1-12-MSTOUR-UK</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q2-11-IRLaunch-ES</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q2-11-IRLaunch-IT</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q2-11-IR-seminar-tour--FR</fullName>
            </value>
            <value>
                <fullName>ASLS-WKSP-Q3-Q4-12-WestInorganic-NA</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q3-11-AnorganicaNORTH-DACH</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q3-Q4-11-Inorganic-Launch-Tour-FR</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q4-11-AnorganicaSOUTH-DACH</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q4-11-InorganicLaunchTour-MASTER-BE</fullName>
            </value>
            <value>
                <fullName>ASLS-SEM-Q4-11-InorganicLaunchTour-MASTER-NL</fullName>
            </value>
            <value>
                <fullName>ASLS-TS-Q2-11-HPLC-Budapest</fullName>
            </value>
            <value>
                <fullName>ASLS-WC-12-LabX-Webinars-NA</fullName>
            </value>
            <value>
                <fullName>ASLS-WKSP-10-RegionalEvents-NA</fullName>
            </value>
            <value>
                <fullName>ASLS-WKSP-2012 IN Tour-NA</fullName>
            </value>
            <value>
                <fullName>ASLS-WKSP-Q3-11-WestFallWksps-US</fullName>
            </value>
            <value>
                <fullName>BIO_LR_Vendor_Groups</fullName>
            </value>
            <value>
                <fullName>BIO_Q111_BioCompare</fullName>
            </value>
            <value>
                <fullName>BIO_TM_VoiceCentric_GLO</fullName>
            </value>
            <value>
                <fullName>BIO_TS_Q111_SBS_POSTERS_US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>