Perkin-UAT/force-app/main/default/objects/Campaign/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>AG-ALH</fullName>
            </value>
            <value>
                <fullName>AG-BIOO</fullName>
            </value>
            <value>
                <fullName>AG-MFT</fullName>
            </value>
            <value>
                <fullName>AG-NAP</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>AVC</fullName>
            </value>
            <value>
                <fullName>AVS</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>BBT</fullName>
            </value>
            <value>
                <fullName>BIO</fullName>
            </value>
            <value>
                <fullName>BTX</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>CHO</fullName>
            </value>
            <value>
                <fullName>CHS</fullName>
            </value>
            <value>
                <fullName>CKP</fullName>
            </value>
            <value>
                <fullName>CLH</fullName>
            </value>
            <value>
                <fullName>CLR</fullName>
            </value>
            <value>
                <fullName>CRD</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>