Perkin-UAT/force-app/main/default/objects/Campaign/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Segment__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3DCIA - Cell Imaging &amp; Analysis</fullName>
            </value>
            <value>
                <fullName>AAV - Adeno associated virus</fullName>
            </value>
            <value>
                <fullName>AI - Autoimmunity</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>ATM - Automation</fullName>
            </value>
            <value>
                <fullName>ATMFLEX - Automation | Flexdrop</fullName>
            </value>
            <value>
                <fullName>BB - Biobanking</fullName>
            </value>
            <value>
                <fullName>BEV - Beverage</fullName>
            </value>
            <value>
                <fullName>BEV – Beverage</fullName>
            </value>
            <value>
                <fullName>BIOBioELN</fullName>
            </value>
            <value>
                <fullName>BIO - Biologics</fullName>
            </value>
            <value>
                <fullName>BIO – Biologics</fullName>
            </value>
            <value>
                <fullName>BIOINF - Biology</fullName>
            </value>
            <value>
                <fullName>BIOLDP</fullName>
            </value>
            <value>
                <fullName>BIOSImA</fullName>
            </value>
            <value>
                <fullName>BIOSINV</fullName>
            </value>
            <value>
                <fullName>BIOSNB</fullName>
            </value>
            <value>
                <fullName>BIOSRP</fullName>
            </value>
            <value>
                <fullName>BIOSRS</fullName>
            </value>
            <value>
                <fullName>BIOSVV</fullName>
            </value>
            <value>
                <fullName>BM - Biological Models</fullName>
            </value>
            <value>
                <fullName>BR - Basic Research</fullName>
            </value>
            <value>
                <fullName>BR-Basic Research</fullName>
            </value>
            <value>
                <fullName>BTX - Biotherapeutics</fullName>
            </value>
            <value>
                <fullName>CCIC - Cell Counting and Image Cytometry</fullName>
            </value>
            <value>
                <fullName>CD - ChemDraw</fullName>
            </value>
            <value>
                <fullName>CFF - Cell Free Fluids</fullName>
            </value>
            <value>
                <fullName>CFF – Cell Free Fluids</fullName>
            </value>
            <value>
                <fullName>CGT - Cell &amp; Gene Therapy</fullName>
            </value>
            <value>
                <fullName>CGT-Cell &amp; Gene Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>