Perkin-UAT/force-app/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>US-EAST</fullName>
            </value>
            <value>
                <fullName>US-WEST</fullName>
            </value>
            <value>
                <fullName>LA North</fullName>
            </value>
            <value>
                <fullName>LA South</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
            <value>
                <fullName>ZA</fullName>
            </value>
            <value>
                <fullName>US-SOUTH</fullName>
            </value>
            <value>
                <fullName>US-MIDWEST</fullName>
            </value>
            <value>
                <fullName>N.Amer</fullName>
            </value>
            <value>
                <fullName>S.Amer</fullName>
            </value>
            <value>
                <fullName>C.Amer</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>LIECHTENSTEIN</fullName>
            </value>
            <value>
                <fullName>LI</fullName>
            </value>
            <value>
                <fullName>SWITZERLAND</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>NORTH</fullName>
            </value>
            <value>
                <fullName>BENELUX</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>