Perkin-UAT/force-app/main/default/objects/Campaign/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Ben/Nordics GDS</fullName>
            </value>
            <value>
                <fullName>BZ - Team LA South</fullName>
            </value>
            <value>
                <fullName>CA10 Analytical</fullName>
            </value>
            <value>
                <fullName>CA10 LS Instrument</fullName>
            </value>
            <value>
                <fullName>CA10 Reagents</fullName>
            </value>
            <value>
                <fullName>CA - Marcom</fullName>
            </value>
            <value>
                <fullName>CA - Team West</fullName>
            </value>
            <value>
                <fullName>Central - EMEA - Islands</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Export Africa, SEE &amp; ED</fullName>
            </value>
            <value>
                <fullName>Export CEE</fullName>
            </value>
            <value>
                <fullName>Export CIS</fullName>
            </value>
            <value>
                <fullName>Export Gulf</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France &amp; Spain GDS</fullName>
            </value>
            <value>
                <fullName>France North</fullName>
            </value>
            <value>
                <fullName>France South</fullName>
            </value>
            <value>
                <fullName>Germany GDS</fullName>
            </value>
            <value>
                <fullName>Germany North East</fullName>
            </value>
            <value>
                <fullName>Germany South</fullName>
            </value>
            <value>
                <fullName>Germany West</fullName>
            </value>
            <value>
                <fullName>Italy Centre</fullName>
            </value>
            <value>
                <fullName>Italy GDS</fullName>
            </value>
            <value>
                <fullName>Italy North East</fullName>
            </value>
            <value>
                <fullName>Italy North West</fullName>
            </value>
            <value>
                <fullName>Italy South</fullName>
            </value>
            <value>
                <fullName>MX - Team LA North</fullName>
            </value>
            <value>
                <fullName>NA East – Chrome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>