Perkin-UAT/force-app/main/default/objects/Campaign/fields/Specific_Publication__c.field-meta.xml
<CustomField>
    <fullName>Specific_Publication__c</fullName>
    <label>Specific Publication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC/LC Magazine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>