Perkin-UAT/force-app/main/default/objects/Campaign/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Global</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
                <label>AMER</label>
            </value>
            <value>
                <fullName>EMEAI</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>LSDX-NAO</fullName>
            </value>
            <value>
                <fullName>LSDX-Europe</fullName>
            </value>
            <value>
                <fullName>LSDX-USCAN</fullName>
            </value>
            <value>
                <fullName>LSDX-GGM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>