Perkin-UAT/force-app/main/default/objects/Campaign/fields/Total_Pre_QL_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Total_Pre_QL_Interaction__c</fullName>
    <label>Total Pre-QL Interaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>