Perkin-UAT/force-app/main/default/objects/Campaign/fields/Total_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed__c</fullName>
    <label>Total Processed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>