Perkin-UAT/force-app/main/default/objects/Campaign/fields/Total_QL_Hot_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Total_QL_Hot_Interaction__c</fullName>
    <label>Total QL Hot Interaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>