Perkin-UAT/force-app/main/default/objects/Campaign/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <description>Calculated difference between the amount budgeted for the event and the actual cost</description>
    <formula>BudgetedCost-ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>