Perkin-UAT/force-app/main/default/objects/Campaign/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Partner/Vendor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>