Perkin-UAT/force-app/main/default/objects/Campaign/validationRules/Name_of_NPI_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_of_NPI_Required</fullName>
    <active>true</active>
    <description>Please fill Name of NPI to save the record.</description>
    <errorConditionFormula>NPI__c == true &amp;&amp; ISBLANK( Name_of_NPI__c )</errorConditionFormula>
    <errorMessage>V.RULE_CAMPAIGN_001: Please fill Name of NPI to save the record.</errorMessage>
</ValidationRule>