Perkin-UAT/force-app/main/default/objects/Campaign/listViews/All_Active_Campaigns_AES.listView-meta.xml
<ListView>
    <fullName>All_Active_Campaigns_AES</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Campaign_Leader__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Sales_Team__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>Region__c</columns>
    <columns>Opportunity_Conversion_Rate__c</columns>
    <columns>AMOUNT_ALL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/31/2025</value>
    </filters>
    <label>All Active Campaigns (AES)</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>