Perkin-UAT/force-app/main/default/objects/Campaign/listViews/All_Campaigns_MIDWEST.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_MIDWEST</fullName>
    <booleanFilter>3 AND ((1 AND 2 AND 4) OR (5 OR 6))</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Location__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>Campaign_Leader__c</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>PARENT_NAME</columns>
    <columns>Sales_Team__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>ENV,EH</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>US-MIDWEST</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2015</value>
    </filters>
    <filters>
        <field>Campaign_Leader__c</field>
        <operation>notContain</operation>
        <value>gresik,cone,dwan,hope,smith,crowe,hall,covey,tipler</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>MIDWEST</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>WEST / MIDWEST</value>
    </filters>
    <label>All Campaigns - MIDWEST</label>
    <language>en_US</language>
</ListView>