Perkin-UAT/force-app/main/default/objects/Campaign/listViews/All_Campaigns_South.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_South</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Region__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>AFM_Code__c</columns>
    <columns>Adtrack_Event_Source_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2012</value>
    </filters>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>AMERICAS</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>LA South</value>
    </filters>
    <label>All Campaigns - South &#39;12</label>
    <language>en_US</language>
</ListView>